Tests, tests and more tests. The build system looks fine though.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,12 +4,11 @@ cmake_minimum_required(VERSION 3.0)
 set(VULKAN_ENABLE ON CACHE BOOL "Enable Vulkan support")
 set(VULKAN_INCLUDE_DIR "" CACHE PATH "Vulkan include directory")
 
-include_directories(${VULKAN_INCLUDE_DIR})
+include_directories(${VULKAN_INCLUDE_DIR} include)
+
+set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)
+set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib)
+set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib)
 
 add_subdirectory(src)
-add_subdirectory(external)
-
-string(REGEX REPLACE "([^;]+)" "src/\\1" SRC "${SRC}")
-string(REGEX REPLACE "([^;]+)" "external/\\1" EXTERNAL "${EXTERNAL}")
-add_library(vivacious ${SRC} ${EXTERNAL})
-
+add_subdirectory(examples)
