Added support for Lua as source files

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,4 +1,19 @@
 set(SRC
 	test.c)
-add_library(vivacious SHARED ${SRC})
-add_library(vivacious-static STATIC ${SRC})
+set(LUA
+	suptest.lua)
+
+set(FULLSRC ${SRC})
+foreach(L ${LUA})
+	string(REPLACE ".lua" ".c" O ${L})
+	add_custom_command(OUTPUT ${CMAKE_CURRENT_BINARY_DIR}/${O}
+		COMMAND lua
+	-e "package.path=package.path..[[\;${CMAKE_SOURCE_DIR}/include/?.lua]]"
+			${L} ${CMAKE_CURRENT_BINARY_DIR}/${O}
+		WORKING_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}
+		MAIN_DEPENDENCY ${L})
+	set(FULLSRC ${FULLSRC} ${CMAKE_CURRENT_BINARY_DIR}/${O})
+endforeach()
+
+add_library(vivacious SHARED ${FULLSRC})
+add_library(vivacious-static STATIC EXCLUDE_FROM_ALL ${FULLSRC})
