--- a/examples/vulkantest/CMakeLists.txt
+++ b/examples/vulkantest/CMakeLists.txt
@@ -1,4 +1,4 @@
 add_executable(vulkantest
 	vktest.c
 )
-target_link_libraries(vulkantest vivacious-static)
+target_link_libraries(vulkantest vivacious)
