--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -12,6 +12,10 @@ set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)
 set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib)
 set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib)
 
+if(VULKAN_ENABLE)
+add_definitions(-DvV_ENABLE_VULKAN)
+endif(VULKAN_ENABLE)
+
 add_subdirectory(include)
 add_subdirectory(src)
 add_subdirectory(examples)
