Framework for Lua binding support. Next is to attempt building Vulkan bindings.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,17 +4,26 @@ cmake_minimum_required(VERSION 3.0)
 set(VULKAN_ENABLE ON CACHE BOOL "Enable Vulkan support")
 set(VULKAN_INCLUDE_DIR "" CACHE PATH "Vulkan include directory")
 
+set(LUA_ENABLE ON CACHE BOOL "Enable Lua support")
+set(LUA_INCLUDE_DIR "" CACHE PATH "Lua include directory")
+
 include_directories(
 	${VULKAN_INCLUDE_DIR}
-	${CMAKE_BINARY_DIR}/include)
+	${LUA_INCLUDE_DIR}
+	${CMAKE_BINARY_DIR}/include
+	${CMAKE_SOURCE_DIR}/src)
 
 set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)
 set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib)
 set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib)
 
 if(VULKAN_ENABLE)
-add_definitions(-DvV_ENABLE_VULKAN)
+add_definitions(-DVv_ENABLE_VULKAN)
 endif(VULKAN_ENABLE)
+
+if(LUA_ENABLE)
+add_definitions(-DVv_ENABLE_LUA)
+endif(LUA_ENABLE)
 
 add_subdirectory(include)
 add_subdirectory(src)
