--- a/include/CMakeLists.txt
+++ b/include/CMakeLists.txt
@@ -1,11 +1,13 @@
 set(GENS
-	)
+)
 set(CPS
-	)
+)
 
 if(VULKAN_ENABLE)
 set(GENS ${GENS}
 	vulkan.lua)
+set(CPS ${CPS}
+	)
 endif(VULKAN_ENABLE)
 
 set(OUTPUT ${CMAKE_BINARY_DIR}/include/vivacious)
@@ -25,7 +27,8 @@ endforeach()
 foreach(C ${CPS})
 	add_custom_command(OUTPUT ${OUTPUT}/${C}
 		COMMAND ${CMAKE_COMMAND} -E copy ${C} ${OUTPUT}/${C}
-		WORKING_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR})
+		WORKING_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}
+		MAIN_DEPENDENCY ${C})
 	set(DEPS ${DEPS} ${OUTPUT}/${C})
 endforeach()
 
