--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -13,8 +13,8 @@ set(X_INCLUDE_DIR "" CACHE PATH "X include directory")
 include_directories(
 	${VULKAN_INCLUDE_DIR}
 	${LUA_INCLUDE_DIR}
-	${CMAKE_BINARY_DIR}/include
-	${CMAKE_SOURCE_DIR}/src)
+	${X_INCLUDE_DIR}
+	${CMAKE_BINARY_DIR}/include)
 
 set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)
 set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib)
