Split up vulkantest into many files. Should be a bit easier to manage now.

--- a/examples/vulkantest/CMakeLists.txt
+++ b/examples/vulkantest/CMakeLists.txt
@@ -1,4 +1,8 @@
 add_executable(vulkantest
 	vulkantest.c
+	common.c
+	window.c
+	instdev.c
+	debug.c
 )
 target_link_libraries(vulkantest vivacious)
