--- a/include/CMakeLists.txt
+++ b/include/CMakeLists.txt
@@ -23,7 +23,8 @@ foreach(LG ${GENS})
 	add_custom_command(OUTPUT ${OUTPUT}/${G}
 		COMMAND lua ${LG} ${OUTPUT}/${G} ${CMAKE_CURRENT_SOURCE_DIR}
 		WORKING_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}
-		MAIN_DEPENDENCY ${LG})
+		MAIN_DEPENDENCY ${LG}
+		DEPENDS ${CMAKE_CURRENT_SOURCE_DIR}/vk.xml)
 	set(DEPS ${DEPS} ${OUTPUT}/${G})
 endforeach()
 
