--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -11,6 +11,9 @@ set(SRC
 set(LUA
 	vulkan.lua
 )
+set(LDEPS
+	${CMAKE_CURRENT_SOURCE_DIR}/../include/vk.xml
+)
 
 foreach(D ${DIR})
 	file(MAKE_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}/${D})
@@ -23,7 +26,8 @@ foreach(L ${LUA})
 		COMMAND lua ${L} ${CMAKE_CURRENT_BINARY_DIR}/${O}
 			${CMAKE_SOURCE_DIR}/include
 		WORKING_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}
-		MAIN_DEPENDENCY ${L})
+		MAIN_DEPENDENCY ${L}
+		DEPENDS ${LDEPS})
 	set(FULLSRC ${FULLSRC} ${CMAKE_CURRENT_BINARY_DIR}/${O})
 endforeach()
 
@@ -31,6 +35,10 @@ include_directories(${CMAKE_CURRENT_BINARY_DIR} ${CMAKE_CURRENT_SOURCE_DIR})
 
 add_library(vivacious SHARED ${FULLSRC})
 add_library(vivacious-static STATIC EXCLUDE_FROM_ALL ${FULLSRC})
+
+add_custom_target(src-lua DEPENDS ${LUA})
+add_dependencies(vivacious src-lua)
+add_dependencies(vivacious-static src-lua)
 
 if((UNIX AND NOT APPLE) OR CYGWIN)
 	target_link_libraries(vivacious dl)
