--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -23,7 +23,7 @@ set(FULLSRC ${SRC})
 foreach(L ${LUA})
 	string(REPLACE ".lua" ".c" O ${L})
 	add_custom_command(OUTPUT ${CMAKE_CURRENT_BINARY_DIR}/${O}
-		COMMAND lua ${L} ${CMAKE_CURRENT_BINARY_DIR}/${O}
+		COMMAND ${LUA_EXECUTABLE} ${L} ${CMAKE_CURRENT_BINARY_DIR}/${O}
 			${CMAKE_SOURCE_DIR}/include
 		WORKING_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}
 		MAIN_DEPENDENCY ${L}
