--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -51,7 +51,7 @@ set(CMAKE_C_STANDARD 99)
 
 add_definitions(-DVv_VERSION_MAJOR=0 -DVv_VERSION_MINOR=1 -DVv_VERSION_PATCH=1)
 
-add_subdirectory(include)
+add_subdirectory(apis)
 add_subdirectory(src)
 add_subdirectory(examples)
 
