--- a/examples/CMakeLists.txt
+++ b/examples/CMakeLists.txt
@@ -1,3 +1,5 @@
+set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -Wno-initializer-overrides")
+
 add_subdirectory(vktest)
 add_subdirectory(vkbtest)
 add_subdirectory(vkmtest)
