--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,9 @@
 [submodule "external/vulkan-docs"]
 	path = external/vulkan-docs
 	url = https://github.com/KhronosGroup/Vulkan-Docs.git
+[submodule "external/spirv"]
+	path = external/spirv
+	url = https://github.com/KhronosGroup/SPIRV-Headers.git
+[submodule "external/luajson"]
+	path = external/luajson
+	url = https://github.com/harningt/luajson.git
