--- a/apis/CMakeLists.txt
+++ b/apis/CMakeLists.txt
@@ -4,13 +4,14 @@ set(APIS
 	vkpipeline
 	vulkan
 	window
+	vkshader
 )
 
 set(OUT ${CMAKE_BINARY_DIR}/include/vivacious)
 file(MAKE_DIRECTORY ${OUT})
 
 set(OUTS ${OUT}/core.h ${OUT}/vivacious.h)
-set(DEPS generator/stdc.lua apis.lua)
+set(DEPS generator/stdc.lua apis.lua ../external/vulkan.lua)
 foreach(A ${APIS})
 	set(OUTS ${OUTS} ${OUT}/${A}.h)
 	set(DEPS ${DEPS} ${A}.lua)
