--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -10,12 +10,18 @@ set(SRC
 	vkmemory/default.c
 	vkpipeline/test.c
 	vkpipeline/default.c
+	vkshader/test.c
+	vkshader/default.c
 )
 set(HEADS
 	libvivacious.h
 )
 set(LUA
 	vulkan/libdl.lua
+	vkshader/mcopy-idshift.lua
+)
+set(LUAH
+	vkshader/sections.lua
 )
 set(LDEPS
 	${CMAKE_CURRENT_SOURCE_DIR}/../external/vulkan.lua
@@ -39,6 +45,19 @@ foreach(L ${LUA})
 	set(FULLSRC ${FULLSRC} ${CMAKE_CURRENT_BINARY_DIR}/${O})
 endforeach()
 
+foreach(L ${LUAH})
+	string(REPLACE ".lua" ".h" O ${L})
+	get_filename_component(DIR ${L} DIRECTORY)
+	file(MAKE_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}/${DIR})
+	add_custom_command(OUTPUT ${CMAKE_CURRENT_BINARY_DIR}/${O}
+		COMMAND ${LUA_EXECUTABLE} ${L} ${CMAKE_CURRENT_BINARY_DIR}/${O}
+			${CMAKE_SOURCE_DIR}/include
+		WORKING_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}
+		MAIN_DEPENDENCY ${L}
+		DEPENDS ${LDEPS})
+	set(FULLSRC ${FULLSRC} ${CMAKE_CURRENT_BINARY_DIR}/${O})
+endforeach()
+
 set(OHEADS)
 foreach(H ${HEADS})
 	set(OHEADS ${OHEADS} ${CMAKE_BINARY_DIR}/include/${H})
@@ -48,7 +67,8 @@ add_custom_command(OUTPUT ${OHEADS}
 	DEPENDS ${HEADS}
 	WORKING_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR})
 
-include_directories(${CMAKE_CURRENT_BINARY_DIR} ${CMAKE_CURRENT_SOURCE_DIR})
+include_directories(${CMAKE_CURRENT_BINARY_DIR} ${CMAKE_CURRENT_SOURCE_DIR}
+	${CMAKE_SOURCE_DIR}/external/spirv/include)
 
 add_library(vivacious SHARED ${FULLSRC})
 add_library(vivacious-static STATIC EXCLUDE_FROM_ALL ${FULLSRC})
