Added the vkhelp demo, to demonstrate the Vulkan Helpers layer. It doesn't look like much, but can get triangles on the screen in <600 lines of code!

--- a/demos/CMakeLists.txt
+++ b/demos/CMakeLists.txt
@@ -5,3 +5,5 @@ add_subdirectory(vkbtest)
 add_subdirectory(vkmtest)
 add_subdirectory(witest)
 add_subdirectory(vkptest)
+add_subdirectory(vkstest)
+add_subdirectory(vkhelp)
