[Indev] Working on the API system again. Should be better (or at least more Lua-esque) by the end.

--- a/apis/CMakeLists.txt
+++ b/apis/CMakeLists.txt
@@ -1,24 +1,25 @@
 set(APIS
-	vkbplate
-	vkmemory
-	vkpipeline
-	vulkan
-	window
-	vkshader
+#	vkbplate
+#	vkmemory
+#	vkpipeline
+#	vulkan
+#	window
+#	vkshader
+	test
 )
 
 set(OUT ${CMAKE_BINARY_DIR}/include/vivacious)
 file(MAKE_DIRECTORY ${OUT})
 
 set(OUTS ${OUT}/core.h ${OUT}/vivacious.h)
-set(DEPS generator/stdc.lua apis.lua ../external/vulkan.lua)
+set(DEPS ../external/vulkan.lua)
 foreach(A ${APIS})
 	set(OUTS ${OUTS} ${OUT}/${A}.h)
 	set(DEPS ${DEPS} ${A}.lua)
 endforeach()
 
 add_custom_command(OUTPUT ${OUTS}
-	COMMAND ${LUA_EXECUTABLE} generator/c.lua ${OUT}
+	COMMAND ${LUA_EXECUTABLE} generator/c.lua ${OUT} ${APIS}
 	WORKING_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}
 	MAIN_DEPENDENCY generator/c.lua
 	DEPENDS ${DEPS})
