[Indev] Working on it

--- a/apis/CMakeLists.txt
+++ b/apis/CMakeLists.txt
@@ -1,11 +1,6 @@
 set(APIS
-#	vkbplate
-#	vkmemory
-#	vkpipeline
 	vulkan
-#	window
-#	vkshader
-	test
+	rendergraph
 )
 
 set(OUT ${CMAKE_BINARY_DIR}/include/vivacious)
