Remastered the build system, to make *slightly* more sense.

--- a/apis/CMakeLists.txt
+++ b/apis/CMakeLists.txt
@@ -1,21 +1,32 @@
-set(GEN_C
+function(gen GEN OUT SUFF EOUTS EDEPS)
+	file(MAKE_DIRECTORY ${OUT})
+	foreach(S ${ARGN})
+		set(OUTS ${OUTS} ${OUT}/${S}${SUFF})
+		set(DEPS ${DEPS} ${S}.lua)
+	endforeach()
+	foreach(S ${EOUTS})
+		set(OUTS ${OUTS} ${OUT}/${S}${SUFF})
+	endforeach()
+	add_custom_command(OUTPUT ${OUTS}
+		COMMAND ${LUA_EXECUTABLE} ${CMAKE_CURRENT_SOURCE_DIR}/stdlib.lua
+			${GEN} ${OUT} ${ARGN}
+		WORKING_DIRECTORY ${CMAKE_SOURCE_DIR}
+		MAIN_DEPENDENCY generator/${GEN}.lua
+		DEPENDS stdlib.lua ${DEPS} ${EDEPS})
+	set(ALLOUTS ${ALLOUTS} ${OUTS} PARENT_SCOPE)
+endfunction(gen)
+
+# Standard C headers, using the standard C header generator
+gen(c ${CMAKE_BINARY_DIR}/include/vivacious .h	"vivacious;core" ""
 	test
 )
 
-set(OUT ${CMAKE_BINARY_DIR}/include/vivacious)
-file(MAKE_DIRECTORY ${OUT})
+# Vulkan Vv interface generator
+#add_custom_command(OUTPUT ${B}/vulkan.h
+#	COMMAND ${LUA_EXECUTABLE} ${SL} vulkan ${B} vulkan
+#	generator/stdlib.lua c ${OUT} ${GEN_C}
+#	WORKING_DIRECTORY ${CMAKE_SOURCE_DIR}
+#	MAIN_DEPENDENCY generator/vulkan.lua
+#	DEPENDS stdlib.lua vulkan.lua)
 
-set(OUTS ${OUT}/core.h ${OUT}/vivacious.h)
-set(DEPS ../external/vulkan.lua generator/stdlib.lua)
-foreach(A ${GEN_C})
-	set(OUTS ${OUTS} ${OUT}/${A}.h)
-	set(DEPS ${DEPS} ${A}.lua)
-endforeach()
-
-add_custom_command(OUTPUT ${OUTS}
-	COMMAND ${LUA_EXECUTABLE} generator/stdlib.lua c ${OUT} ${GEN_C}
-	WORKING_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}
-	MAIN_DEPENDENCY generator/c.lua
-	DEPENDS ${DEPS})
-
-add_custom_target(include DEPENDS ${OUTS})
+add_custom_target(include DEPENDS ${ALLOUTS})
