--- a/apis/CMakeLists.txt
+++ b/apis/CMakeLists.txt
@@ -2,7 +2,7 @@ set(OUT ${CMAKE_BINARY_DIR}/include/vivacious)
 
 # Standard C headers, using the standard C header generator
 gen(GENERATOR c VARIANTS bound DIRECTORY ${OUT} OUTPUTS ?.h
-	SPECS vulkan devicememorypool rendergraph
+	SPECS vulkan devicememorypool rendergraph shaderbank
 )
 
 # core.h, included by all the other headers and has VvMAGIC
